--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase": "^11.10.0",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
+    "next-intl": "^4.5.5",
     "next-themes": "^0.4.6",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
