--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "next-intl": "^4.5.5",
